--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,133 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;600;700&family=Staatliches&display=swap');
+
+:root {
+  --grey: #2F2519;
+  --lightGrey: #4A3F35;
+  --lightOrange: #FA7D09;
+  --orange: #FF4301;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Quicksand', sans-serif;
+  scroll-behavior: smooth !important;
 }
 
 a {
-  color: inherit;
+  color: unset;
   text-decoration: none;
 }
 
 * {
   box-sizing: border-box;
+  background-color: var(--grey);
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+p {
+  color: #aaaaaa;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: rgb(255, 255, 255);
+}
+
+h1 {
+  font-size: 2rem !important;
+}
+
+section {
+  padding-top: 150px;
+}
+
+footer {
+  padding-bottom: 10px;
+  padding-top: 60px;
+  border-top: 1px solid var(--lightGrey);
+}
+
+.project__btn {
+  background: transparent !important;
+  padding: 5px 0px !important;
+  border: none;
+}
+
+.project__btn a {
+  text-decoration: none;
+  background: transparent;
+}
+
+.primary__btn {
+  background: var(--orange) !important;
+  padding: 7px 25px !important;
+  border: 1px solid var(--orange) !important;
+  border-radius: 1px;
+  transition: .2s ease-in-out;
+}
+
+.primary__btn a {
+  text-decoration: none;
+  color: #fff;
+  background: transparent !important;
+}
+
+.primary__btn:hover {
+  background: var(--lightGrey) !important;
+  box-shadow: 0px 0px 2px 1px rgba(255, 67, 1, 0.5);
+}
+
+.primary__btn a:hover,
+.secondary__btn a:hover {
+  color: #fff;
+}
+
+
+.secondary__btn {
+  background: var(--lightGrey);
+  border: 1px solid var(--lightGrey);
+  outline: none;
+  padding: 7px 20px;
+  margin-left: 10px;
+}
+
+.secondary__btn a {
+  color: var(--orange) !important;
+  text-decoration: none;
+  background: transparent !important;
+}
+
+.secondary__btn:hover {
+  border: 1px solid var(--orange)
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+  background: var(--lightGrey);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 0em;
+  background: var(--grey);
+}
+
+@media only screen and (max-width: 992px) {
+  p {
+    font-size: .9rem !important;
   }
-  body {
-    color: white;
-    background: black;
+
+  .primary__btn a, .secondary__btn a {
+    font-size: .9rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  section {
+    padding-top: 110px;
+  }
+
+  footer {
+    padding-top: 0;
+    border: none;
   }
 }
