--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,8 +11,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Quicksand', sans-serif;
+  /* font-family: 'Quicksand', sans-serif; */
   scroll-behavior: smooth !important;
+  background-color: var(--grey) !important;
 }
 
 a {
@@ -22,7 +23,6 @@ a {
 
 * {
   box-sizing: border-box;
-  background-color: var(--grey);
 }
 
 p {
@@ -109,6 +109,18 @@ footer {
 ::-webkit-scrollbar-thumb {
   border-radius: 0em;
   background: var(--grey);
+}
+
+/* .Toastify__toast--error {
+  border: 1px solid var(--orange);
+} */
+
+.Toastify__toast-icon {
+  display: none !important;
+}
+
+.toastProgress {
+  background: var(--orange) !important;
 }
 
 @media only screen and (max-width: 992px) {
